<resources>
    <string name="app_name">Weather App</string>
    <string name="act1">Weather App</string>
    <string name="act2">City Weather</string>
    <string name="_city_hint">City Name (i.e. Charlotte)</string>
    <string name="_country_hint">Country Name (i.e. US)</string>
    <string name="_search_button">Search City</string>
    <string name="_saved_cities">Saved Cities</string>
    <string name="_no_cities">There are no cities to display. Search the city from the search box and save.</string>
    <string name="_dailyForecast">Daily Forecast for </string>

    <string name="hTemp">Temperature</string>
    <string name="hCond">Condition</string>
    <string name="hHumidity">Humidity</string>
    <string name="hPressure">Pressure</string>
    <string name="hWind">Wind</string>
    <string name="threeHourForecast">Three Hourly Forecast on </string>
    <string name="title_activity_settings">Settings</string>

    <string name="choose_title">Temperature Unit</string>
    <string name="dialog_title">Choose Temperature Unit</string>
    <string name="choose_sub">Choose between Celsius and Fahrenheit</string>
    <string-array name="listentries">
        <item>° C</item>
        <item>° F</item>
    </string-array>
    <string-array name="listentryvalues">
        <item>C</item>
        <item>F</item>
    </string-array>
    <string name="nocity">Set Current City</string>
    <string name="nocity1">Current City not yet set</string>

</resources>
